# HR-Accrual-Engine-Cloud

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: CONFIGURATION.md  INSTALL.md  USER_GUIDE.md
hr_accrual_engine/: hooks.py  modules.txt
hr_accrual_engine/accrual_engine/calculations/: base.py  eos.py  leave.py  ticket.py
hr_accrual_engine/accrual_engine/doctype/accrual_component/: accrual_component.json  accrual_component.py
hr_accrual_engine/accrual_engine/doctype/accrual_run/: accrual_run.js  accrual_run.json  accrual_run.py
hr_accrual_engine/accrual_engine/doctype/accrual_run_log/: accrual_run_log.json  accrual_run_log.py
hr_accrual_engine/accrual_engine/doctype/accrual_settings/: accrual_settings.json  accrual_settings.py
hr_accrual_engine/accrual_engine/doctype/employee_accrual/: employee_accrual.json  employee_accrual.py
hr_accrual_engine/accrual_engine/report/accrual_ledger/: accrual_ledger.json  accrual_ledger.py
hr_accrual_engine/accrual_engine/services/: journal.py  processor.py  utils.py  validation.py
hr_accrual_engine/config/: desktop.py
hr_accrual_engine/fixtures/: roles.json  workspace_hr_accrual_management.json
